[package]
name = "yellowstone-jet"
version = "14.7.0"
authors = ["Triton One"]
edition = "2024"
description = "Yellowstone Jet"
license = "Apache-2.0"
resolver = "2"
publish = false

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.83"
base64 = "0.22.0"
bincode = "1.3.3"
bs58 = "0.5.1"
borsh = "1.5.1"
bytes = "1.10.0"
clap = { version = "4.5.2", features = ["cargo", "derive", "env"] }
derive_more = { version = "2.0.1", features = ["display"] }
futures = "0.3.30"
hostname = "0.4.0"
humantime-serde = "1.1.1"
hyper = "1.5.0"
jsonrpsee = { version = "0.26.0", features = [
    "http-client",
    "macros",
    "server",
] }
lazy_static = "1.4.0"
maplit = "1.0.2"
pin-project = "1.1.5"
prometheus = "0.14.0"
prost = "0.14.0"
prost-types = "0.14.0"
quinn = "0.11.6"
quinn-proto = "0.11.6"
rand = "0.9.0"
rustls = { version = "0.23.15", default-features = false }
semver = "1.0.22"
serde = "1.0.215"
serde_json = "1.0.116"
serde_yaml = "0.9.25"

# Agave Crates
solana-client = "2.0.0"
# solana-connection-cache = "2.0.0"
solana-net-utils = "2.0.0"
solana-quic-client = "2.0.0"
solana-rpc-client-api = "2.0.0"
solana-streamer = "2.0.0"
solana-tpu-client = "2.0.0"
solana-version = "2.0.0"
solana-rpc-client = "2.0.0"
solana-transaction-status-client-types = "2.0.0"
solana-system-interface = "1.0.0"
solana-bincode = "2.0.0"
solana-tls-utils = "2.0.0"
# --> Anza - Solana SDK (decoupled from agave)
solana-program = "2.0.0"
# TEMPORARY
reqwest = { version = "0.12.15", features = ["json"] }
retry = "2.0.0"
solana-instruction = "2.0.0"
solana-pubkey = "2.0.0"
solana-keypair = "2.0.0"
solana-account = "2.0.0"
solana-clock = "2.0.0"
solana-hash = "2.0.0"
solana-epoch-schedule = "2.0.0"
solana-quic-definitions = "2.0.0"
solana-signature = { version = "2.0.0", features = ["rand"] }
solana-signer = "2.0.0"
solana-sdk-ids = "2.0.0"
solana-transaction = "2.0.0"
solana-epoch-info = "2.0.0"
solana-commitment-config = "2.0.0"
solana-transaction-error = "2.0.0"
solana-message = "2.0.0"
solana-compute-budget-interface = "2.0.0"
solana-native-token = "2.0.0"
solana-nonce = "2.0.0"
solana-packet = "2.0.0"
thiserror = "2.0.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tonic-prost = { version = "0.14.0" }
tokio-stream = "0.1.15"
tonic = { version = "0.14.0", features = ["tls-native-roots"] }
tonic-health = "0.14.0"
tower = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.1", features = [
    "ansi",
    "env-filter",
    "json",
] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = "9.0.0"
# yellowstone-shield-store = "~0.5.2"
yellowstone-shield-store = "0.7.0"
yellowstone-vixen = "0.5.0"
yellowstone-vixen-yellowstone-grpc-source = { version = "0.3.0" }
tokio-util = "0.7.16"

[[bin]]
name = "lewis-dummy-server"
path = "src/bin/lewis_dummy_server.rs"

[build-dependencies]
anyhow = "1.0.69"
cargo-lock = "10.0.1"
git-version = "0.3.9"
protobuf-src = "1.1.0"
tonic-build = "0.14.0"
tonic-prost-build = "0.14.0"
vergen = { version = "9.0.1", features = ["build", "rustc"] }

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
codegen-units = 1
lto = true

[patch.crates-io]
solana-rpc-client = { git = "https://github.com/rpcpool/solana-public.git", tag = "v2.3.8-triton-public" }
solana-rpc-client-api = { git = "https://github.com/rpcpool/solana-public.git", tag = "v2.3.8-triton-public" }
solana-account-decoder = { git = "https://github.com/rpcpool/solana-public.git", tag = "v2.3.8-triton-public" }
solana-account-decoder-client-types = { git = "https://github.com/rpcpool/solana-public.git", tag = "v2.3.8-triton-public" }
solana-client = { git = "https://github.com/rpcpool/solana-public.git", tag = "v2.3.8-triton-public" }
solana-streamer = { git = "https://github.com/rpcpool/solana-public.git", tag = "v2.3.8-triton-public" }
solana-transaction-context = { git = "https://github.com/rpcpool/solana-public.git", tag = "v2.3.8-triton-public" }
solana-transaction-status = { git = "https://github.com/rpcpool/solana-public.git", tag = "v2.3.8-triton-public" }
solana-transaction-status-client-types = { git = "https://github.com/rpcpool/solana-public.git", tag = "v2.3.8-triton-public" }

solana-net-utils   = { git = "https://github.com/rpcpool/solana-public.git", tag = "v2.3.8-triton-public" }
solana-tpu-client  = { git = "https://github.com/rpcpool/solana-public.git", tag = "v2.3.8-triton-public" }
solana-quic-client = { git = "https://github.com/rpcpool/solana-public.git", tag = "v2.3.8-triton-public" }


[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
