[package]
name = "yellowstone-jet-tpu-client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Triton One Yellowstone Jet TPU Client"
keywords = ["yellowstone", "solana", "rpc", "tpu", "quic"]
readme = "README.md"
publish = true
exclude = ["src/bin/*"]

[[bin]]
name = "test-managed-schedule"
path = "src/bin/test-managed-schedule.rs"
publish = false

[[bin]]
name = "test-tpu-info"
path = "src/bin/test-tpu-info.rs"
publish = false

[[bin]]
name = "test-tpu-send"
path = "src/bin/test-tpu-send.rs"
publish = false

[[bin]]
name = "test-slot-tracker"
path = "src/bin/test-slot-tracker.rs"
publish = false

[features]
default = ["yellowstone-grpc"]
prometheus = ["dep:prometheus"]
examples = [
    "dep:dotenvy",
    "dep:tracing-subscriber",
    "dep:clap",
    "dep:solana-system-interface",
    "dep:solana-transaction",
    "dep:solana-hash",
    "dep:bincode",
    "yellowstone-grpc",
]
yellowstone-grpc = [
    "dep:yellowstone-grpc-client",
    "dep:yellowstone-grpc-proto",
    "dep:solana-rpc-client",
]
shield = ["dep:yellowstone-shield-store"]

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true, optional = true }
bs58 = { workspace = true }
borsh = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "env"], optional = true }

derive_more = { workspace = true, features = ["display"] }
dotenvy = { workspace = true, optional = true }
futures = { workspace = true }
hostname = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
humantime-serde = { workspace = true }
lazy_static = { workspace = true }
maplit = { workspace = true }
pin-project = { workspace = true }
prometheus = { workspace = true, optional = true }
quinn = { workspace = true }
quinn-proto = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
retry = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

solana-account = { workspace = true }
solana-client = { workspace = true }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-epoch-info = { workspace = true }
solana-hash = { workspace = true, optional = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-net-utils = { workspace = true }
solana-packet = { workspace = true }
solana-pubkey = { workspace = true }
solana-quic-definitions = { workspace = true }
solana-rpc-client = { workspace = true, optional = true }
solana-rpc-client-api = { workspace = true }
solana-signature = { workspace = true, features = ["rand"] }
solana-signer = { workspace = true }
solana-streamer = { workspace = true }
solana-system-interface = { workspace = true, optional = true, features = ["bincode"] }
solana-tls-utils = { workspace = true, features = ["agave-unstable-api"] }
solana-transaction-error = { workspace = true }
solana-transaction = { workspace = true, optional = true }
solana-version = { workspace = true }

thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"], optional = true }
yellowstone-grpc-client = { workspace = true, optional = true }
yellowstone-grpc-proto = { workspace = true, optional = true }
yellowstone-shield-store = { workspace = true, optional = true }