[package]
name = "example-jet-tpu-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.51", features = ["derive"] }
dotenvy = "0.15.0"
futures = "0.3.31"
thiserror = "2.0.17"
tokio = "1.48.0"

# Agave Monorepo
solana-client = "3.1.8"
solana-rpc-client = "3.1.8"
solana-rpc-client-api = "3.1.8"

# Solana SDK
solana-account = "3.0.0"
solana-bincode = "3.1.0"
solana-commitment-config = "3.1.0"
solana-hash = "3.0.0"
solana-keypair = "3.1.0"
solana-message = "3.0.0"
solana-pubkey = "3.0.0"
solana-signature = "3.3.0"
solana-signer = "3.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-transaction = "3.0.0"
solana-transaction-error = "3.0.0"

# Yellowstone
yellowstone-jet-tpu-client = { version = "0.3.0", features = ["yellowstone-grpc"] }
